--- a/themes/demaree-2022/layouts/_default/baseof.html
+++ b/themes/demaree-2022/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html :class="{ 'dark': (currentTheme === 'dark') }">
+<html lang="en" :class="{ 'dark': (currentTheme === 'dark') }">
 <head>
 {{- partial "head.html" . -}}
 {{ block "head" . }}{{ end }}
