--- a/themes/demaree-2022/assets/css/main.css
+++ b/themes/demaree-2022/assets/css/main.css
@@ -5,10 +5,9 @@
 @import url('https://cdn.demaree.net/fonts/epicene/epicene.css');
 @import url('https://dd-webfonts.vercel.app/signifier/fonts.css');
 
-@import url('https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght,SOFT,WONK@9..144,100..900,0..100,0..1&family=Source+Sans+3:wght@200..900&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wght@0,200..900;1,200..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wdth,wght@0,50..150,200..900;1,50..150,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
 
 :root {
   --inset-x: clamp(1.5rem,7.5vw,3rem);
