--- a/themes/demaree-2022/layouts/posts/single.html
+++ b/themes/demaree-2022/layouts/posts/single.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 {{ partial "posts/post_header.html" . }}
-<div class="content-wrapper">
+<div class="content-wrapper" style="--fonts--serif: 'ivar-text';">
   {{ .Content }}
 </div>
 
