--- a/themes/demaree-2022/assets/css/main.css
+++ b/themes/demaree-2022/assets/css/main.css
@@ -1,27 +1,26 @@
-@import url('https://cdn.demaree.net/fonts/soehne/index.css');
-@import url('https://cdn.demaree.net/fonts/soehne-mono/index.css');
-@import url('https://cdn.demaree.net/fonts/soehne-schmal/index.css');
-@import url('https://cdn.demaree.net/fonts/ivar-text/index.css');
-@import url('https://cdn.demaree.net/fonts/epicene/epicene.css');
-@import url('https://cdn.demaree.net/fonts/tiempos/fonts.css');
-/* @import url('https://dd-webfonts.vercel.app/signifier/fonts.css');
-@import url('https://dd-webfonts.vercel.app/tiempos/fonts.css'); */
-
-@import url('https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:ital,wdth,wght@0,50..150,200..900;1,50..150,200..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
+@import url("https://cdn.demaree.net/fonts/soehne/index.css");
+@import url("https://cdn.demaree.net/fonts/soehne-mono/index.css");
+@import url("https://cdn.demaree.net/fonts/soehne-schmal/index.css");
+@import url("https://cdn.demaree.net/fonts/ivar-text/index.css");
+@import url("https://cdn.demaree.net/fonts/epicene/epicene.css");
+@import url("https://cdn.demaree.net/fonts/tiempos/fonts.css");
 
 :root {
-  --inset-x: clamp(1.5rem,7.5vw,3rem);
-  
+  --inset-x: clamp(1.5rem, 7.5vw, 3rem);
+
   --width--content: 44rem;
   --width--wide: 62rem;
   --width--inset: calc(100% - (2 * var(--inset-x)));
   --inset-width: var(--width--inset);
-  
-  --font--sans: 'soehne-web', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --font--serif: "tiempos-text", Georgia, serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --font--mono: 'soehne-mono-web', ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+
+  --font--sans: "soehne-web", ui-sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    "Noto Color Emoji";
+  --font--serif: "tiempos-text", Georgia, serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font--mono: "soehne-mono-web", ui-monospace, SFMono-Regular, Menlo, Monaco,
+    Consolas, "Liberation Mono", "Courier New", monospace;
 
   --header-height: 5rem;
 
@@ -36,7 +35,7 @@
   --col--ink-base: #33302e;
   --col--ink-bold: black;
   --col--ink-medium: #645e5a;
-  --col--ink-light:  #908a86;
+  --col--ink-light: #908a86;
   --col--primary: #d63d3d;
   --col--buttons: #d63d3d;
 
@@ -49,7 +48,7 @@
 :where(.theme-dark, .dark .dark\:theme-dark) {
   --col--surface: lch(7% 4 -88);
   --col--header: lch(2% 2 -88);
-  --col--ink-base: lch(94% 5 -88); 
+  --col--ink-base: lch(94% 5 -88);
   --col--ink-bold: white;
   --col--ink-medium: lch(66% 18 -88);
   --col--ink-light: lch(46% 18 -88);
@@ -111,7 +110,7 @@ body {
 :where(figure ul, figure, ol) {
   list-style-type: none;
   margin: unset;
-  padding: unset;  
+  padding: unset;
 }
 
 .site-wrapper {
@@ -179,7 +178,7 @@ body {
     display: flex;
     align-items: center;
     gap: 1.25rem;
-    justify-self: end; 
+    justify-self: end;
 
     .menu-wrapper {
       list-style-type: none;
@@ -203,7 +202,7 @@ body {
     box-shadow: inset 0 -2px 0 var(--col--primary);
     color: var(--col--ink-bold);
     font-weight: 600;
-    
+
     svg {
       color: var(--col--primary);
       opacity: 1;
@@ -230,11 +229,11 @@ body {
 
 .theme-switch .theme-option,
 .theme-switch::after {
-   height: var(--ts-size);
-   inline-size: 1.75rem;
+  height: var(--ts-size);
+  inline-size: 1.75rem;
 }
 
-.theme-switch input[type=radio] {
+.theme-switch input[type="radio"] {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -264,7 +263,7 @@ body {
   background-color: var(--col--surface);
   border-radius: 9999px;
   display: block;
-  content: '';
+  content: "";
   left: 0rem;
   position: absolute;
   top: 0px;
@@ -282,7 +281,7 @@ body {
   position: relative;
   z-index: 30;
 }
-  
+
 .bison-burger * {
   all: unset;
 }
@@ -341,8 +340,9 @@ body {
   top: 0px;
   right: 0px;
   z-index: 10;
-  
-  .menu-wrapper, .menu-wrapper li {
+
+  .menu-wrapper,
+  .menu-wrapper li {
     all: unset;
     display: block;
   }
@@ -389,9 +389,9 @@ body {
   padding-block: 3rem;
   position: relative;
 
-  &:before {
+  /* &:before {
     background-image: var(--svg-wavy-lines);
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     inset: 0;
@@ -400,7 +400,7 @@ body {
     .dark & {
       opacity: 0.3;
     }
-  }
+  } */
 
   &--compact {
     padding-block: 1.5rem;
@@ -524,7 +524,7 @@ body {
     text-decoration-line: none;
 
     &::after {
-      content: '';
+      content: "";
       display: block;
       width: 30ch;
       border-top: 2px solid var(--col--ink-light);
@@ -562,7 +562,10 @@ body {
   padding-block: 3rem;
   line-height: 1.1;
 
-  * { margin: unset; padding: unset; }
+  * {
+    margin: unset;
+    padding: unset;
+  }
 
   &__inner {
     list-style-type: none;
@@ -597,7 +600,7 @@ body {
         padding-inline-end: 2.5rem;
         padding-inline-start: 0;
         text-align: end;
-  
+
         .post-navigation__icon {
           inset-inline-start: unset;
           inset-inline-end: 0;
@@ -714,7 +717,8 @@ body {
   font-size: 0.875rem;
   letter-spacing: 0.03ch;
 
-  &, & * {
+  &,
+  & * {
     box-sizing: border-box;
     color: inherit;
     font-weight: inherit;
@@ -770,13 +774,11 @@ body {
   }
 }
 
-
-
 .post-card-title {
   font-weight: 400;
   font-size: 1.5rem;
   line-height: 1.125;
-  letter-spacing: -0.01ch; 
+  letter-spacing: -0.01ch;
   margin-block-end: 0.25rem;
 
   a {
@@ -882,17 +884,20 @@ body {
 .is-style-big-intro {
   color: var(--col--ink-medium);
   font-family: var(--font--sans);
-  font-size: clamp(1.375em, 3.5vw, 1.625em) !important;
+  /* font-size: clamp(1.375em, 3.5vw, 1.625em) !important; */
   font-weight: 400;
-  line-height: 1.2;
+  line-height: 1.1;
+  font-size: 52px;
 
-  b, strong {
+  b,
+  strong {
     color: var(--col--ink-bold);
     font-weight: 600;
   }
 }
 
-.content-wrapper > hr, .wp-block-separator {
+.content-wrapper > hr,
+.wp-block-separator {
   margin-block: 5rem;
   border-color: var(--col--ink-light);
 
@@ -918,7 +923,8 @@ body {
   }
 }
 
-.wp-block-image, .wp-block-embed {
+.wp-block-image,
+.wp-block-embed {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -928,7 +934,6 @@ body {
   inline-size: 100%;
   max-inline-size: 36rem;
 }
-
 
 .wavy-separator {
   background-image: url("data:image/svg+xml,%3Csvg id='e4wf0WIt3SV1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 60 16' shape-rendering='geometricPrecision' text-rendering='geometricPrecision'%3E%3Cpath id='e4wf0WIt3SV2' d='M66.409443,14.683312C50.11612,14.683312,50.380023,0.683312,33.181307,0.683312C16.863894,0.683312,16.863894,14.683312,0.000002,14.683312' transform='matrix(0.903486 0 0 1 -0.000002 0.316688)' fill='none' stroke='rgba(0,0,0,0.2)' stroke-width='3'/%3E%3C/svg%3E");
@@ -949,7 +954,8 @@ body {
 .styled-separator {
   margin-block: 3rem;
 
-  &, & > hr {
+  &,
+  & > hr {
     border-color: black;
     border-width: 2px;
     margin-inline: auto;
@@ -958,11 +964,15 @@ body {
 }
 
 .dd-home-hero {
-  background-image: var(--svg-wavy-lines);
-  display: grid;
-  grid-template-columns: [left-edge] 1fr [over-start] minmax(2rem, 6vw) [over-end] minmax(220px, 40vw) [right-edge] !important;
+  /* display: grid;
+  grid-template-columns:
+    [left-edge] 1fr [over-start] minmax(2rem, 6vw) [over-end] minmax(
+      220px,
+      40vw
+    )
+    [right-edge] !important;
   grid-template-rows: auto;
-  padding-block: 2rem;
+  padding-block: 2rem; */
 
   & &__content,
   & &__photo {
@@ -972,17 +982,20 @@ body {
 
   & &__content {
     --v-padding: 4rem;
-    background-color: var(--col--header);
-    border-inline-end: 0.5rem solid var(--col--primary);
     grid-column: left-edge / over-end;
-    padding: var(--v-padding) var(--inset-x) var(--v-padding) max(var(--inset-x), calc(50vw - (var(--width--wide) / 2)));
-  
+    padding: var(--v-padding) var(--inset-x) var(--v-padding)
+      max(var(--inset-x), calc(50vw - (var(--width--wide) / 2)));
+
     > * {
       inline-size: unset;
       margin: unset;
 
-      &:first-child { margin-block-start: 0; }
-      &:last-child { margin-block-end: 0; }
+      &:first-child {
+        margin-block-start: 0;
+      }
+      &:last-child {
+        margin-block-end: 0;
+      }
     }
 
     > * + * {
@@ -992,7 +1005,7 @@ body {
 
   & &__photo {
     grid-column: over-start / right-edge;
-    
+
     figure {
       display: block;
       margin: unset;
@@ -1009,7 +1022,7 @@ body {
   @media (max-width: 760px) {
     grid-template-columns: 100% !important;
     padding-block: 0;
-    
+
     & &__photo,
     & &__content {
       grid-column: unset;
@@ -1031,7 +1044,8 @@ body {
 
 .dd-block-gallery,
 .wp-block-gallery {
-  ul, li {
+  ul,
+  li {
     margin: unset;
   }
 
@@ -1065,7 +1079,8 @@ body {
     letter-spacing: 0.02em;
   }
 
-  &, & * {
+  &,
+  & * {
     padding: unset;
     margin: unset;
   }
@@ -1105,7 +1120,8 @@ body {
     padding: unset;
   }
 
-  > h2, &__heading {
+  > h2,
+  &__heading {
     grid-column: 1 / -1;
     gap: 0.5rem;
     display: flex;
@@ -1170,8 +1186,6 @@ body {
 }
 
 .posts-archive {
-  /* inline-size: var(--width--inset);
-  margin-inline: auto; */
   padding-block: 3rem 6rem;
   padding-inline: var(--inset-x);
 
@@ -1192,53 +1206,4 @@ body {
     margin: unset;
     padding: unset;
   }
-}
-
-/* UTILITIES */
-
-.ff-signifier {
-  font-family: signifier, 'Comic Sans MS' !important;
-}
-
-.ff-epicene-text {
-  font-family: 'epicene-text' !important;
-}
-
-.ff-fraunces {
-  font-family: 'Fraunces' !important;
-}
-.ff-georgia {
-  font-family: 'Georgia' !important;
-}
-.ff-ivar-text {
-  font-family: 'ivar-text' !important;
-}
-
-.ff-roboto-serif {
-  font-family: 'Roboto Serif' !important;
-}
-
-.ff-source-serif-4 {
-  font-family: 'Source Serif 4' !important;
-}
-
-.ff-tiempos-text {
-  font-family: 'tiempos-text', 'Comic Sans MS' !important;
-}
-
-.ff-times-new-roman {
-  font-family: 'Times New Roman';
-}
-
-.serifs-test {
-  counter-reset: section;
-}
-
-.serifs-test > p:before {
-  counter-increment: section;
-  display: block;
-  content: "Sample " counter(section) ": ";
-  font-family: var(--font--sans);
-  font-weight: 600;
-  font-size: 1rem;
 }
