--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,24 +1,31 @@
-@import url('https://cdn.demaree.net/fonts/soehne/index.css');
-@import url('https://cdn.demaree.net/fonts/soehne-mono/index.css');
-@import url('https://cdn.demaree.net/fonts/ivar-text/index.css');
-@import url('https://cdn.demaree.net/fonts/epicene/epicene.css');
-@import url('https://cdn.demaree.net/fonts/tiempos/fonts.css');
+@import url("https://cdn.demaree.net/fonts/soehne/index.css");
+@import url("https://cdn.demaree.net/fonts/soehne-mono/index.css");
+@import url("https://cdn.demaree.net/fonts/ivar-text/index.css");
+@import url("https://cdn.demaree.net/fonts/epicene/epicene.css");
+@import url("https://cdn.demaree.net/fonts/tiempos/fonts.css");
+@import url("https://cdn.demaree.net/fonts/roslindale/index.css");
+@import url("https://demaree-assets.nyc3.digitaloceanspaces.com/fonts/obviously-var.css");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --inset-x: clamp(1.5rem,7.5vw,3rem);
-  
+  --inset-x: clamp(1.25rem, 6.25vw, 2rem);
+
   --width--content: 44rem;
   --width--wide: 62rem;
   --width--inset: calc(100% - (2 * var(--inset-x)));
   --inset-width: var(--width--inset);
-  
-  --font--sans: 'soehne-web', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --font--serif: "tiempos-text", Georgia, serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --font--mono: 'soehne-mono-web', ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+
+  --font--sans: "soehne-web", ui-sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    "Noto Color Emoji";
+  --font--serif: "tiempos-text", Georgia, serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font--mono: "soehne-mono-web", ui-monospace, SFMono-Regular, Menlo, Monaco,
+    Consolas, "Liberation Mono", "Courier New", monospace;
 
   --header-height: 5rem;
 
@@ -33,7 +40,7 @@
   --col--ink-base: #33302e;
   --col--ink-bold: black;
   --col--ink-medium: #645e5a;
-  --col--ink-light:  #908a86;
+  --col--ink-light: #908a86;
   --col--primary: #d63d3d;
   --col--buttons: #d63d3d;
 
@@ -46,7 +53,7 @@
 :where(.theme-dark, .dark .dark\:theme-dark) {
   --col--surface: lch(7% 4 -88);
   --col--header: lch(2% 2 -88);
-  --col--ink-base: lch(94% 5 -88); 
+  --col--ink-base: lch(94% 5 -88);
   --col--ink-bold: white;
   --col--ink-medium: lch(66% 18 -88);
   --col--ink-light: lch(46% 18 -88);
@@ -108,7 +115,7 @@ body {
 :where(figure ul, figure, ol) {
   list-style-type: none;
   margin: unset;
-  padding: unset;  
+  padding: unset;
 }
 
 .site-wrapper {
@@ -176,7 +183,7 @@ body {
     display: flex;
     align-items: center;
     gap: 1.25rem;
-    justify-self: end; 
+    justify-self: end;
 
     .menu-wrapper {
       list-style-type: none;
@@ -200,7 +207,7 @@ body {
     box-shadow: inset 0 -2px 0 var(--col--primary);
     color: var(--col--ink-bold);
     font-weight: 600;
-    
+
     svg {
       color: var(--col--primary);
       opacity: 1;
@@ -212,8 +219,6 @@ body {
   }
 }
 
-
-
 .bison-burger {
   font-family: var(--font--sans);
   width: 20px;
@@ -221,7 +226,7 @@ body {
   position: relative;
   z-index: 30;
 }
-  
+
 .bison-burger * {
   all: unset;
 }
@@ -280,8 +285,9 @@ body {
   top: 0px;
   right: 0px;
   z-index: 10;
-  
-  .menu-wrapper, .menu-wrapper li {
+
+  .menu-wrapper,
+  .menu-wrapper li {
     all: unset;
     display: block;
   }
@@ -330,7 +336,7 @@ body {
 
   &:before {
     background-image: var(--svg-wavy-lines);
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     inset: 0;
@@ -463,7 +469,7 @@ body {
     text-decoration-line: none;
 
     &::after {
-      content: '';
+      content: "";
       display: block;
       width: 30ch;
       border-top: 2px solid var(--col--ink-light);
@@ -501,7 +507,10 @@ body {
   padding-block: 3rem;
   line-height: 1.1;
 
-  * { margin: unset; padding: unset; }
+  * {
+    margin: unset;
+    padding: unset;
+  }
 
   &__inner {
     list-style-type: none;
@@ -536,7 +545,7 @@ body {
         padding-inline-end: 2.5rem;
         padding-inline-start: 0;
         text-align: end;
-  
+
         .post-navigation__icon {
           inset-inline-start: unset;
           inset-inline-end: 0;
@@ -653,7 +662,8 @@ body {
   font-size: 0.875rem;
   letter-spacing: 0.03ch;
 
-  &, & * {
+  &,
+  & * {
     box-sizing: border-box;
     color: inherit;
     font-weight: inherit;
@@ -709,13 +719,11 @@ body {
   }
 }
 
-
-
 .post-card-title {
   font-weight: 400;
   font-size: 1.5rem;
   line-height: 1.125;
-  letter-spacing: -0.01ch; 
+  letter-spacing: -0.01ch;
   margin-block-end: 0.25rem;
 
   a {
@@ -825,13 +833,15 @@ body {
   font-weight: 400;
   line-height: 1.2;
 
-  b, strong {
+  b,
+  strong {
     color: var(--col--ink-bold);
     font-weight: 600;
   }
 }
 
-.content-wrapper > hr, .wp-block-separator {
+.content-wrapper > hr,
+.wp-block-separator {
   margin-block: 5rem;
   border-color: var(--col--ink-light);
 
@@ -857,7 +867,8 @@ body {
   }
 }
 
-.wp-block-image, .wp-block-embed {
+.wp-block-image,
+.wp-block-embed {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -867,7 +878,6 @@ body {
   inline-size: 100%;
   max-inline-size: 36rem;
 }
-
 
 .wavy-separator {
   background-image: url("data:image/svg+xml,%3Csvg id='e4wf0WIt3SV1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 60 16' shape-rendering='geometricPrecision' text-rendering='geometricPrecision'%3E%3Cpath id='e4wf0WIt3SV2' d='M66.409443,14.683312C50.11612,14.683312,50.380023,0.683312,33.181307,0.683312C16.863894,0.683312,16.863894,14.683312,0.000002,14.683312' transform='matrix(0.903486 0 0 1 -0.000002 0.316688)' fill='none' stroke='rgba(0,0,0,0.2)' stroke-width='3'/%3E%3C/svg%3E");
@@ -888,7 +898,8 @@ body {
 .styled-separator {
   margin-block: 3rem;
 
-  &, & > hr {
+  &,
+  & > hr {
     border-color: black;
     border-width: 2px;
     margin-inline: auto;
@@ -899,7 +910,12 @@ body {
 .dd-home-hero {
   background-image: var(--svg-wavy-lines);
   display: grid;
-  grid-template-columns: [left-edge] 1fr [over-start] minmax(2rem, 6vw) [over-end] minmax(220px, 40vw) [right-edge] !important;
+  grid-template-columns:
+    [left-edge] 1fr [over-start] minmax(2rem, 6vw) [over-end] minmax(
+      220px,
+      40vw
+    )
+    [right-edge] !important;
   grid-template-rows: auto;
   padding-block: 2rem;
 
@@ -914,14 +930,19 @@ body {
     background-color: var(--col--header);
     border-inline-end: 0.5rem solid var(--col--primary);
     grid-column: left-edge / over-end;
-    padding: var(--v-padding) var(--inset-x) var(--v-padding) max(var(--inset-x), calc(50vw - (var(--width--wide) / 2)));
-  
+    padding: var(--v-padding) var(--inset-x) var(--v-padding)
+      max(var(--inset-x), calc(50vw - (var(--width--wide) / 2)));
+
     > * {
       inline-size: unset;
       margin: unset;
 
-      &:first-child { margin-block-start: 0; }
-      &:last-child { margin-block-end: 0; }
+      &:first-child {
+        margin-block-start: 0;
+      }
+      &:last-child {
+        margin-block-end: 0;
+      }
     }
 
     > * + * {
@@ -931,7 +952,7 @@ body {
 
   & &__photo {
     grid-column: over-start / right-edge;
-    
+
     figure {
       display: block;
       margin: unset;
@@ -948,7 +969,7 @@ body {
   @media (max-width: 760px) {
     grid-template-columns: 100% !important;
     padding-block: 0;
-    
+
     & &__photo,
     & &__content {
       grid-column: unset;
@@ -970,7 +991,8 @@ body {
 
 .dd-block-gallery,
 .wp-block-gallery {
-  ul, li {
+  ul,
+  li {
     margin: unset;
   }
 
@@ -1004,7 +1026,8 @@ body {
     letter-spacing: 0.02em;
   }
 
-  &, & * {
+  &,
+  & * {
     padding: unset;
     margin: unset;
   }
@@ -1044,7 +1067,8 @@ body {
     padding: unset;
   }
 
-  > h2, &__heading {
+  > h2,
+  &__heading {
     grid-column: 1 / -1;
     gap: 0.5rem;
     display: flex;
@@ -1136,37 +1160,37 @@ body {
 /* UTILITIES */
 
 .ff-signifier {
-  font-family: signifier, 'Comic Sans MS' !important;
+  font-family: signifier, "Comic Sans MS" !important;
 }
 
 .ff-epicene-text {
-  font-family: 'epicene-text' !important;
+  font-family: "epicene-text" !important;
 }
 
 .ff-fraunces {
-  font-family: 'Fraunces' !important;
+  font-family: "Fraunces" !important;
 }
 .ff-georgia {
-  font-family: 'Georgia' !important;
+  font-family: "Georgia" !important;
 }
 .ff-ivar-text {
-  font-family: 'ivar-text' !important;
+  font-family: "ivar-text" !important;
 }
 
 .ff-roboto-serif {
-  font-family: 'Roboto Serif' !important;
+  font-family: "Roboto Serif" !important;
 }
 
 .ff-source-serif-4 {
-  font-family: 'Source Serif 4' !important;
+  font-family: "Source Serif 4" !important;
 }
 
 .ff-tiempos-text {
-  font-family: 'tiempos-text', 'Comic Sans MS' !important;
+  font-family: "tiempos-text", "Comic Sans MS" !important;
 }
 
 .ff-times-new-roman {
-  font-family: 'Times New Roman';
+  font-family: "Times New Roman";
 }
 
 .serifs-test {
