--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -4,22 +4,18 @@ import Date from './Date.astro';
 
 export interface Props {
 	title: string;
-	author: string;
-	publishDate: string;
-	heroImage: string;
-	alt: string;
+	date: string;
 }
 
-const { title, pubDate, heroImage, alt } = Astro.props;
+const { title, date } = Astro.props;
 ---
 
 <div class="layout">
 	<article class="content">
 		<div>
 			<header>
-				{heroImage && <img width="720" height="420" class="hero-image" loading="lazy" src={heroImage} alt={alt} />}
-				{pubDate && <p class="publish-date mt-2">
-					<Date date={pubDate} />
+				{date && <p class="publish-date mt-2">
+					<Date date={date} />
 				</p>}
 				<h1 class="title">{title}</h1>
 			</header>
