--- a/src/components/SiteHeader.astro
+++ b/src/components/SiteHeader.astro
@@ -3,28 +3,8 @@ import Icon from './Icon.astro';
 import { faDDLogo } from '../lib/ddIcon';
 ---
 <header class="h-16 sm:h-20 flex px-8 items-center">
-	<a href="/" class="contents">
+	<a href="/" class="contents text-primary">
 		<Icon icon={faDDLogo} style="rounded" />
 		<span class="sr-only">David Demaree</span>
 	</a>
 </header>
-
-<style>
-	header :where(*) {
-		margin: 0;
-		padding: 0;
-	}
-
-	/* h1 {
-		margin: 0;
-		font-size: 1.5rem;
-		max-width: 100%;
-		display: flex;
-		flex-grow: 1;
-	} */
-
-	h1 a {
-		text-decoration: none;
-		display: inline-flex;
-	}
-</style>
