--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,60 +3,32 @@
 import BaseHead from '@components/BaseHead.astro';
 import SiteHeader from '@components/SiteHeader.astro';
 import BlogPostPreview from '@components/BlogPostPreview.astro';
+import Footer from '@components/Footer.astro';
+import Intro from "../content/intro.mdx";
+import { getAllPosts } from '@lib/posts';
 
-let title = 'David Demaree';
+let title = "David Demaree's blog";
 let description = 'The perfect starter for your perfect blog.';
 let permalink = 'https://example.com/';
 
 let allPosts = []
-// let allPosts = await Astro.glob('./p/*.md');
-// allPosts = allPosts.sort((a, b) => new Date(b.frontmatter.pubDate).valueOf() - new Date(a.frontmatter.pubDate).valueOf());
 
-let otherAllPosts = await Astro.glob("../posts/*.md");
-// console.log(otherAllPosts.map(f => generateSlug(f.file)))
+allPosts = await getAllPosts();
 ---
 
 <html lang="en">
 	<head>
 		<BaseHead {title} {description} {permalink} />
-
-		<style>
-			header {
-				width: 100%;
-				height: 100%;
-				background-color: var(--theme-bg-offset);
-				display: flex;
-				align-items: center;
-				justify-content: center;
-			}
-
-			.content {
-				margin-top: 2rem;
-				margin-bottom: 8rem;
-			}
-
-			.content :global(main > * + *) {
-				margin-top: 1rem;
-			}
-
+		<style is:global>
 			.intro {
-				padding-bottom: 2rem;
-				border-bottom: 4px solid var(--theme-divider);
-				margin-bottom: 2rem;
+				> * + * {
+					@apply mt-4;
+				}
 
-				grid-template-columns: 180px 1fr;
-				display: grid;
-				gap: 1rem;
-				align-items: center;
-			}
-
-			.intro > * {
-				margin: 0;
-			}
-
-			.latest {
-				font-size: 2.5rem;
-				font-weight: 700;
+				h1, h2, h3 {
+					@apply font-semibold;
+					font-size: revert;
+				}
 			}
 		</style>
 	</head>
@@ -66,18 +38,28 @@ let otherAllPosts = await Astro.glob("../posts/*.md");
 		<div class="wrapper">
 			<main class="content">
 				
-				<section class="intro">
-					<img src="/assets/dd-stitch-transparent.png" width="320" height="453" alt="Man wearing Stitch cap" class="mb-2" />
-					<div>
-						<h1 class="latest">{title}</h1>
-						<p>{description}</p>
+				<section class="intro mb-12 px-inset flex flex-col items-center">
+					<img
+						src="/assets/dd-stitch-transparent.png"
+						width="320"
+						height="453"
+						alt="Man wearing Stitch cap"
+						class="mb-4 w-[clamp(160px,50vw,200px)]"
+					/>
+					<div class="intro text-2xl w-full max-w-content">
+						<Intro />
 					</div>
 				</section>
 
-				<section aria-label="Blog post list">
+				<section class="blog-posts w-minus-inset max-w-content mx-auto space-y-6 my-16" aria-label="Blog post list">
+					<header>
+						<h2 class="text-lg font-medium tracking-widest uppercase">Blog posts</h2>
+					</header>
+
 					{allPosts.map((p) => <BlogPostPreview post={p} />)}
 				</section>
 			</main>
 		</div>
+		<Footer />
 	</body>
 </html>
