--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -1,3 +1,76 @@
+/* @tailwind base;
+@tailwind components;
+@tailwind utilities; */
+
+:root {
+  /* Primary */
+  --color-red-900: 57 9 10;
+  --color-red-800: 97 12 24;
+  --color-red-700: 139 17 37;
+  --color-red-600: 181 25 51;
+  --color-red-500: 225 34 66;
+  --color-red-400: 248 85 95;
+  --color-red-300: 250 137 135;
+  --color-red-200: 250 180 176;
+  --color-red-100: 250 219 217;
+
+  /* Secondary */
+  --color-purple-900: 38 19 57;
+  --color-purple-800: 65 33 98;
+  --color-purple-700: 94 49 141;
+  --color-purple-600: 133 79 188;
+  --color-purple-500: 147 97 195;
+  --color-purple-400: 169 128 206;
+  --color-purple-300: 191 159 218;
+  --color-purple-200: 212 191 229;
+  --color-purple-100: 233 223 240;
+
+  /* Info */
+  --color-blue-900: 21 28 36;
+  --color-blue-800: 37 50 63;
+  --color-blue-700: 54 73 92;
+  --color-blue-600: 73 97 121;
+  --color-blue-500: 93 123 152;
+  --color-blue-400: 116 152 188;
+  --color-blue-300: 143 175 209;
+  --color-blue-200: 181 201 223;
+  --color-blue-100: 219 228 238;
+
+  /* Neutral */
+  --color-neutral-900: 27 27 27;
+  --color-neutral-800: 43 43 43;
+  --color-neutral-700: 71 71 71;
+  --color-neutral-600: 94 94 94;
+  --color-neutral-500: 119 119 119;
+  --color-neutral-400: 145 145 145;
+  --color-neutral-300: 171 171 171;
+  --color-neutral-200: 198 198 198;
+  --color-neutral-100: 226 226 226;
+  --color-neutral-50: 240 240 240;
+
+  /* Success */
+  --color-green-900: 23 30 8;
+  --color-green-800: 34 54 9;
+  --color-green-700: 49 78 12;
+  --color-green-600: 67 104 19;
+  --color-green-500: 85 131 27;
+  --color-green-400: 104 159 35;
+  --color-green-300: 124 188 43;
+  --color-green-200: 135 204 47;
+  --color-green-100: 176 246 89;
+
+  /* Caution */
+  --color-gold-900: 37 25 4;
+  --color-gold-800: 68 43 1;
+  --color-gold-700: 98 62 0;
+  --color-gold-600: 130 84 0;
+  --color-gold-500: 163 106 0;
+  --color-gold-400: 197 129 0;
+  --color-gold-300: 232 153 0;
+  --color-gold-200: 255 175 49;
+  --color-gold-100: 252 221 184;
+}
+
 :root {
   --font-fallback: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif, Apple Color Emoji, Segoe UI Emoji;
@@ -38,14 +111,17 @@
   --width-wide: 62rem;
 
   --spacing-inset: 1.5rem;
+  --spacing-inset: clamp(1.5rem, 6vw, 2.25rem);
 }
 
 :root {
   color-scheme: light;
-  --theme-accent: var(--color-orange);
+  /* --theme-accent: var(--color-orange);
   --theme-accent-rgb: var(--color-orange-rgb);
 
-  --theme-accent: theme("colors.red.500");
+  --theme-accent-rgb: var(--color-red-500);
+  --theme-accent: rgba(var(--theme-accent-rgb));
+
   --theme-accent-opacity: 0.1;
   --theme-divider: var(--color-gray-100);
   --theme-text: var(--color-gray-800);
@@ -57,210 +133,24 @@
   --theme-bg-accent: rgba(var(--theme-accent-rgb), var(--theme-accent-opacity));
   --theme-code-inline-bg: var(--color-gray-100);
   --theme-code-text: var(--color-gray-100);
-  --theme-code-bg: var(--color-gray-700);
+  --theme-code-bg: var(--color-gray-700); */
 
-  --theme-primary: theme("colors.red.500");
+  --theme-background: var(--color-neutral-50);
+  --theme-primary: var(--color-red-500);
+  --theme-text: var(--color-neutral-800);
+  --theme-text-strong: theme("colors.black");
+  --theme-text-light: var(--color-neutral-500);
+  --theme-text-lighter: var(--color-neutral-300);
+  --theme-divider: var(--color-neutral-200);
+  --theme-divider-light: var(--color-neutral-100);
 }
 
 body {
-  background: var(--theme-bg);
-  color: var(--theme-text);
-}
-
-:root.theme-dark {
-  color-scheme: dark;
-  --theme-accent-opacity: 0.3;
-  --theme-divider: var(--color-gray-900);
-  --theme-text: var(--color-gray-200);
-  --theme-text-light: var(--color-gray-400);
-  --theme-text-lighter: var(--color-gray-600);
-  --theme-bg: var(--color-black);
-  --theme-bg-offset: var(--color-gray-900);
-  --theme-code-inline-bg: var(--color-gray-800);
-  --theme-code-text: var(--color-gray-200);
-  --theme-code-bg: var(--color-gray-900);
-}
-
-::selection {
-  color: var(--theme-accent);
-  background-color: rgba(var(--theme-accent-rgb), var(--theme-accent-opacity));
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-}
-
-:root {
-  --user-font-scale: 1rem - 16px;
-  --max-width: calc(100% - 2rem);
-}
-
-@media (min-width: 50em) {
-  :root {
-    --max-width: 40em;
-  }
-}
-
-body {
-  font-family: var(--font-body);
-  font-size: 1rem;
-  font-size: clamp(
-    0.875rem,
-    0.4626rem + 1.0309vw + var(--user-font-scale),
-    1.125rem
-  );
-  line-height: 1.625;
+  @apply text-text bg-background;
 }
 
 .wrapper {
   margin-inline: auto;
   max-width: var(--width-wide);
   width: 100%;
-}
-
-nav ul {
-  list-style: none;
-  padding: 0;
-}
-
-/* Typography */
-:where(h1, h2, h3, h4, h5, h6) {
-  @apply font-sans;
-  margin-bottom: 1.38rem;
-  font-weight: 400;
-  line-height: 1.3;
-}
-
-:where(h2, h3):not(:first-child) {
-  margin-top: 2.5rem;
-}
-
-h1 {
-  font-size: clamp(2.488rem, 1.924rem + 1.41vw, 3.052rem);
-}
-
-h2 {
-  font-size: clamp(2.074rem, 1.707rem + 0.9175vw, 2.441rem);
-}
-
-h3 {
-  font-size: clamp(1.728rem, 1.503rem + 0.5625vw, 1.953rem);
-}
-
-h4 {
-  font-size: clamp(1.44rem, 1.317rem + 0.3075vw, 1.563rem);
-}
-
-h5 {
-  font-size: clamp(1.2rem, 1.15rem + 0.125vw, 1.25rem);
-}
-
-p {
-  color: var(--theme-text-light);
-}
-
-small,
-.text_small {
-  font-size: 0.833rem;
-}
-
-a {
-  color: var(--theme-accent);
-  font-weight: 400;
-  text-underline-offset: 0.08em;
-  /* text-decoration: none; */
-  align-items: center;
-  gap: 0.5rem;
-}
-
-a > code {
-  position: relative;
-  color: var(--theme-accent);
-  background: transparent;
-  text-underline-offset: var(--padding-block);
-}
-
-a > code::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  display: block;
-  background: var(--theme-accent);
-  opacity: var(--theme-accent-opacity);
-  border-radius: var(--border-radius);
-}
-
-a:hover,
-a:focus {
-  text-decoration: underline;
-}
-
-a:focus {
-  outline: 2px solid currentColor;
-  outline-offset: 0.25em;
-}
-
-strong {
-  font-weight: 600;
-  color: inherit;
-}
-
-/* Supporting Content */
-
-code {
-  --border-radius: 3px;
-  --padding-block: 0.2rem;
-  --padding-inline: 0.33rem;
-
-  font-family: var(--font-mono);
-  font-size: 0.85em;
-  color: inherit;
-  background-color: var(--theme-code-inline-bg);
-  padding: var(--padding-block) var(--padding-inline);
-  margin: calc(var(--padding-block) * -1) -0.125em;
-  border-radius: var(--border-radius);
-  word-break: break-word;
-}
-
-pre.astro-code > code {
-  all: unset;
-}
-
-pre {
-  position: relative;
-  --padding-block: 1rem;
-  --padding-inline: 2rem;
-  padding: var(--padding-block) var(--padding-inline);
-  padding-right: calc(var(--padding-inline) * 2);
-
-  overflow-y: hidden;
-  overflow-x: auto;
-}
-
-@media (min-width: 37.75em) {
-  pre {
-    --padding-inline: 1.25rem;
-    border-radius: 8px;
-  }
-}
-
-.flex {
-  display: flex;
-  align-items: center;
-}
-
-img.cover {
-  width: 100%;
-  max-height: 50vh;
-  object-fit: cover;
-}
-
-blockquote .source {
-  font-weight: 500;
-  color: var(--color);
-  font-size: 1rem;
 }
